--- a/web/login_student.html
+++ b/web/login_student.html
@@ -37,7 +37,7 @@ Licence URI: http://www.os-templates.com/template-terms
                                             <option value="fc">Faculty of Computing (FC)</option>
                                         </select>
                     <br>
-                    <button type="submit" name="login">Login</button>
+                    <input name="login" type="submit" value="Login">
                    <!-- / main body -->
                     <div class="clear"></div>
                 </main>
