--- a/web/login_student.html
+++ b/web/login_student.html
@@ -19,8 +19,8 @@ Licence URI: http://www.os-templates.com/template-terms
             <header id="header" class="clear"> 
                 <!-- ################################################################################################ -->
                 <div id="logo" class="fl_left">
-                    <h1>Student Menu</h1>
-                    <p>Eighto Campus Management</p>
+                    <h1>Eighto Campus Management</h1>
+                    <p>Student Menu</p>
                 </div>
                 <!-- ################################################################################################ --> 
             </header>
