--- a/web/student/advisor.html
+++ b/web/student/advisor.html
@@ -31,7 +31,7 @@ Licence URI: http://www.os-templates.com/template-terms
                             <ul>
                                 <li><a href="../student/personal-record.html">Personal Record</a></li>
                                 <li><a href="../student/address.html">Address</a></li>
-                                <li><a href="../student/guardian.html">Guardian</a></li>
+                                <li><a href="../student/guardian.html" class="active">Guardian</a></li>
                                 <li><a href="../student/spm.html">SPM</a></li>
                                 <li><a href="../student/advisor.html">Academic Advisor</a></li>
                                 <li><a href="../student/semester.html">Semester</a></li>
@@ -54,15 +54,44 @@ Licence URI: http://www.os-templates.com/template-terms
                     <!-- main body --> 
                     <!-- ################################################################################################ -->
                     <h1><span style="margin-left: 500px">Current User: NURULFITRAH BINTI NOORHALIM<a href="#"> Logout</a></span></h1>
-                    <div class="one_quarter first"></div>
-                    <div class="three_quarter">
-                        <span style="font-style: italic">Welcome to "Student Menu"</span><br>
-                        <p>TO CONTINUE SEARCHING FOR STUDENT'S INFORMATION PLEASE MOVE TO THE CURSOR TO THE ABOVE MENU.</p>
-                        <br><br><br>
-                        <p><strong>ATTENTION: </strong>Please <a href="#"><strong>logout</strong></a> after using the system</p>
-                    </div>
+                    <img class="imgl borderedbox" src="../images/demo/120x120.gif" alt=""><br><br>
+                    <p><strong>NAME:</strong><span style="font-style: underline"> NURULFITRAH BINTI NOORHALIM</span></p><br>
+
                     <!-- / main body -->
                     <div class="clear"></div>
+                </main>
+            </div>
+        </div>
+        <div class="wrapper row3">
+            <div class="rounded">
+                <main class="container clear" > 
+                    <div class="scrollable">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th colspan="2">ACADEMY ADVISOR INFORMATION SESSION - 201320142</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><strong>Name</strong></td>
+                                        <td>ROZILAWATI BINTI DOLLAH @ MD. ZAIN</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Faculty</strong></td>
+                                        <td>FACULTY OF COMPUTING</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Position</strong></td>
+                                        <td>LECTURER</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Email</strong></td>
+                                        <td>	rozilawati@utm.my</td>
+                                    </tr>                                    
+                                </tbody>
+                            </table>
+                    </div>                               
                 </main>
             </div>
         </div>
