--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@ Licence URI: http://www.os-templates.com/template-terms
                         <li><a href="#">Contact Us</a></li>
                         <li><a href="#">A - Z Index</a></li>
                         <li><a href="login_student.jsp">Student Login</a></li>
-                        <li><a href="#">Staff Login</a></li>
+                        <li><a href="login_admin.jsp">Staff Login </a></li>
                     </ul>
                 </nav>
                 <!-- ################################################################################################ --> 
